--- a/.todo.md
+++ b/.todo.md
@@ -1,19 +1,23 @@
 # todo:
 - add more p9 like features
 - add custom dialog box for email redirection confirmation
-- add custom context menu
 - try to change ALL cursors (warning, etc, etc)
-- add gitlab like console greeting
 - access selected text from text area
+- add custom context menu
+	- https://www.youtube.com/watch?v=-R8_MswrzD8
+- rename nerd mode
+- .cur for cursor
+- check how redirected urls look
+- imporve console greeting
 
 # doing:
-- plumer
-	- ✔️ disable right click like from that custom context menu vid
-	- text selection ==> piping 
-		- access text from textbox in js
-	- get selected text aand on a right click if it matches to anything then plumb it
-	- https://www.youtube.com/watch?v=-R8_MswrzD8
+
 # done:
-- ✔️ nerd-mode --> .term
+- ✔️ add gitlab like console greeting
+- ✔️ refactor nerd-mode.js
+- ✔️ text selection ==> piping 
+	- ✔️ access text from textbox in js
 - ❌ map.json
 	<!-- having all files in a single .json for easier href redirect updates works in theory but it just add a lot more js and it still is kind of a mess to maintain. the idea is alright. maybe somhting like it already exists. idk. might work on it later if nothing exists. -->
+- ✔️ disable right click like from that custom context menu vid
+- ✔️ nerd-mode --> .term
