--- a/.todo.md
+++ b/.todo.md
@@ -9,7 +9,18 @@
 - .cur for cursor
 - check how redirected urls look
 - imporve console greeting
-
+- refactor all directories and how files are stored
+	- move index.css and index.js into folder
+	- https://openlab.bmcc.cuny.edu/mmp-240-fall-19-stein/2019/09/05/basic-website-folder-file-structure/
+	- https://medium.com/@nmayurashok/file-and-folder-structure-for-web-development-8c5c83810a5
+	- https://webstyleguide.com/wsg3/5-site-structure/3-site-file-structure.html
+	- https://www.reddit.com/r/webdev/comments/3afdb8/website_directory_structure_bestpractices/
+- .hhtaccess??
+	- https://helponnet.com/2021/11/30/remove-folder-name-from-url/#:~:text=Removing%20folder%20name%20from%20URLs%20with%20htaccess%20file&text=To%20remove%20the%20folder%20A,of%20your%20htaccess%20in%20root.&text=That's%20it.,able%20to%20access%20your%20index2.
+	- https://stackoverflow.com/questions/18973058/how-to-remove-folder-name-from-url-using-htaccess
+- only one css?
+	- https://stackoverflow.com/questions/30557915/is-it-good-idea-to-make-separate-css-file-for-each-html-page#:~:text=There's%20not%20universal%20best%20practice,reasonable%20to%20separate%20them%20out.
+- remove nerd mode and have a term popup
 # doing:
 
 # done:
