updated variable: e --> eventSelection

--- a/.todo.md
+++ b/.todo.md
@@ -1,11 +1,14 @@
 # todo:
 - add custom dialog box for email redirection confirmation
-- add custom context menu
-	- https://www.youtube.com/watch?v=-R8_MswrzD8
 - imporve console greeting
+- add help action in context menu
 # doing:
 
 # done:
+- ⚠️ see if i can do the thing where i draw the size and position of the term and then it launches in that area
+	<!-- not required as of now. the overflow stopper hack works well enough -->
+- ✔️ add custom context menu
+	- https://www.youtube.com/watch?v=-R8_MswrzD8
 - ❌ .cur for cursor
 	<!-- windows specific(?) -->
 - ⚠️ try to change ALL cursors (rezize, warning, etc, etc)
