--- a/.todo.md
+++ b/.todo.md
@@ -2,13 +2,14 @@
 - add custom dialog box for email redirection confirmation
 - imporve console greeting
 - add help action in context menu
+- add src commnad that redirects to src code
 # doing:
 
 # done:
 - ⚠️ see if i can do the thing where i draw the size and position of the term and then it launches in that area
 	<!-- not required as of now. the overflow stopper hack works well enough -->
 - ✔️ add custom context menu
-	- https://www.youtube.com/watch?v=-R8_MswrzD8
+	<!-- - https://www.youtube.com/watch?v=-R8_MswrzD8 -->
 - ❌ .cur for cursor
 	<!-- windows specific(?) -->
 - ⚠️ try to change ALL cursors (rezize, warning, etc, etc)
@@ -16,18 +17,18 @@
 - ✔️ rename nerd mode
 - ✔️ check how redirected urls look
 - ✔️ refactor all directories and how files are stored
-	- move index.css and index.js into folder
+	<!-- - move index.css and index.js into folder
 	- https://openlab.bmcc.cuny.edu/mmp-240-fall-19-stein/2019/09/05/basic-website-folder-file-structure/
 	- https://medium.com/@nmayurashok/file-and-folder-structure-for-web-development-8c5c83810a5
 	- https://webstyleguide.com/wsg3/5-site-structure/3-site-file-structure.html
-	- https://www.reddit.com/r/webdev/comments/3afdb8/website_directory_structure_bestpractices/
+	- https://www.reddit.com/r/webdev/comments/3afdb8/website_directory_structure_bestpractices/ -->
 - ✔️ add more p9 like features
 - ❌ .hhtaccess??
 	<!-- only for apache -->
-	- https://helponnet.com/2021/11/30/remove-folder-name-from-url/#:~:text=Removing%20folder%20name%20from%20URLs%20with%20htaccess%20file&text=To%20remove%20the%20folder%20A,of%20your%20htaccess%20in%20root.&text=That's%20it.,able%20to%20access%20your%20index2.
-	- https://stackoverflow.com/questions/18973058/how-to-remove-folder-name-from-url-using-htaccess
+	<!-- - https://helponnet.com/2021/11/30/remove-folder-name-from-url/#:~:text=Removing%20folder%20name%20from%20URLs%20with%20htaccess%20file&text=To%20remove%20the%20folder%20A,of%20your%20htaccess%20in%20root.&text=That's%20it.,able%20to%20access%20your%20index2.
+	- https://stackoverflow.com/questions/18973058/how-to-remove-folder-name-from-url-using-htaccess -->
 - ✔️ only one css?
-	- https://stackoverflow.com/questions/30557915/is-it-good-idea-to-make-separate-css-file-for-each-html-page#:~:text=There's%20not%20universal%20best%20practice,reasonable%20to%20separate%20them%20out.
+	<!-- - https://stackoverflow.com/questions/30557915/is-it-good-idea-to-make-separate-css-file-for-each-html-page#:~:text=There's%20not%20universal%20best%20practice,reasonable%20to%20separate%20them%20out. -->
 - ✔️ remove nerd mode and have a term popup
 - ✔️ add gitlab like console greeting
 - ✔️ refactor nerd-mode.js
