--- a/.todo.md
+++ b/.todo.md
@@ -1,11 +1,11 @@
 # todo:
-- add custom dialog box for email redirection confirmation
 - imporve console greeting
-- add help action in context menu
-- add src commnad that redirects to src code
+- add help 
 # doing:
 
 # done:
+- ✔️ add custom dialog box for email redirection confirmation
+- ✔️ add src commnad that redirects to src code
 - ⚠️ see if i can do the thing where i draw the size and position of the term and then it launches in that area
 	<!-- not required as of now. the overflow stopper hack works well enough -->
 - ✔️ add custom context menu
