--- a/.todo.md
+++ b/.todo.md
@@ -19,7 +19,7 @@
 - ✔️ rename nerd mode
 - ✔️ check how redirected urls look
 - ✔️ refactor all directories and how files are stored
-	<!-- - move index.css and index.js into folder
+	<!-- - move old.css and old.js into folder
 	- https://openlab.bmcc.cuny.edu/mmp-240-fall-19-stein/2019/09/05/basic-website-folder-file-structure/
 	- https://medium.com/@nmayurashok/file-and-folder-structure-for-web-development-8c5c83810a5
 	- https://webstyleguide.com/wsg3/5-site-structure/3-site-file-structure.html
