--- a/.todo.md
+++ b/.todo.md
@@ -1,11 +1,14 @@
 # todo:
-- imporve console greeting
-- add help 
-- write proper about
-- print list output in alphabetical order
+- add console greeting to new site
 # doing:
 
 # done:
+- ❌ print list output in alphabetical order
+	<!-- not needed anymore -->
+- ❌ write proper about
+	<!-- not needed anymore -->
+- ❌ add help 
+	<!-- not needed anymore -->
 - ✔️ add custom dialog box for email redirection confirmation
 - ✔️ add src commnad that redirects to src code
 - ⚠️ see if i can do the thing where i draw the size and position of the term and then it launches in that area
