--- a/.todo.md
+++ b/.todo.md
@@ -1,6 +1,7 @@
 # todo:
 - add console greeting to new site
 - better favicon
+- [firefox] [old] text selection not cleared on plumbing
 # doing:
 
 # done:
