--- a/.todo.md
+++ b/.todo.md
@@ -1,7 +1,7 @@
 # todo:
 - add console greeting to new site
 - better favicon
-- [firefox] [old] text selection not cleared on plumbing
+- [firefox] [old] text selection not cleared on plumbing through line input. text are works as expected.
 # doing:
 
 # done:
